; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecdsa_ossl.c_ossl_ecdsa_sign.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecdsa_ossl.c_ossl_ecdsa_sign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ossl_ecdsa_sign(i32 %0, i8* %1, i32 %2, i8* %3, i32* %4, i32* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i32 %0, i32* %10, align 4
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = load i32, i32* %12, align 4
  %21 = load i32*, i32** %15, align 8
  %22 = load i32*, i32** %16, align 8
  %23 = load i32*, i32** %17, align 8
  %24 = call i32* @ECDSA_do_sign_ex(i8* %19, i32 %20, i32* %21, i32* %22, i32* %23)
  store i32* %24, i32** %18, align 8
  %25 = load i32*, i32** %18, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %8
  %28 = load i32*, i32** %14, align 8
  store i32 0, i32* %28, align 4
  store i32 0, i32* %9, align 4
  br label %35

29:                                               ; preds = %8
  %30 = load i32*, i32** %18, align 8
  %31 = call i32 @i2d_ECDSA_SIG(i32* %30, i8** %13)
  %32 = load i32*, i32** %14, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32*, i32** %18, align 8
  %34 = call i32 @ECDSA_SIG_free(i32* %33)
  store i32 1, i32* %9, align 4
  br label %35

35:                                               ; preds = %29, %27
  %36 = load i32, i32* %9, align 4
  ret i32 %36
}

declare dso_local i32* @ECDSA_do_sign_ex(i8*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @i2d_ECDSA_SIG(i32*, i8**) #1

declare dso_local i32 @ECDSA_SIG_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
